# hsgd-dunhuang-dance

./: .gitignore  README.md  bvh_utils.py.example  model.py  pyproject.toml  requirements.txt
configs/: default.yaml
docs/: code_release_notes.md
scripts/: smoke_test.py
src/hsgd/: __init__.py  model.py
tests/: test_import.py
